Fixing catalog spacing

--- a/stylesheets/datagov.css
+++ b/stylesheets/datagov.css
@@ -54,7 +54,7 @@ div.next-top.category{
 }
 
 .catalog .next-top{
-	height: 175px;
+	height: 195px;
 }
 
 .catalog .next-title{
